# llm-a100

./: README.md  bench.sh  pixi.toml  pyproject.toml  register.sh  serve.sh
services/: deploy.sh  llm-serve-start.service  llm-serve-start.timer  llm-serve-stop.service  llm-serve-stop.timer
