[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "addict>=2.4.0",
    "cache-dit>=1.3.5",
    "diffusers>=0.37.1",
    "imageio>=2.37.3",
    "remote-pdb>=2.1.0",
    "sglang>=0.5.9",
    "flashinfer-jit-cache>=0.6.3,<0.6.4",
    "nvidia-cuda-runtime==13.0.48",
    "nvidia-cuda-nvcc>=13.2.78",
    "torch==2.9.1+cu130",
    "torchvision>=0.24.1",
    "nvidia-cuda-cccl>=13.2.75",
    "cuda-toolkit>=13.2.0",
]


[tool.uv.sources]
flashinfer-jit-cache = [
    { index = "flashinfer-jit-cache" },
]
torch = [
    { index = "pytorch" },
]
torchvision = [
    { index = "pytorch" },
]

[[tool.uv.index]]
name = "flashinfer-jit-cache"
url = "https://flashinfer.ai/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

