[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "addict>=2.4.0",
    "cache-dit==1.3.0",
    "diffusers==0.37.0",
    "imageio==2.36.0",
    "remote-pdb>=2.1.0",
    "flashinfer-jit-cache==0.6.8.post1+cu130",
    "nvidia-cuda-runtime==13.0.48",
    "nvidia-cuda-nvcc>=13.2.78",
    "torch==2.9.1+cu130",
    "torchvision",
    "nvidia-cuda-cccl>=13.2.75",
    "cuda-toolkit>=13.2.0",
    "sglang[all]",
    "protobuf>=6.33.6",
    "sglang-router",
    "maturin>=1.13.1",
]

[tool.uv]
no-build-isolation-package = ["sglang", "sglang-router"]

[tool.uv.sources]
flashinfer-jit-cache = [
    { index = "flashinfer-jit-cache" },
]
torch = [
    { index = "pytorch" },
]
torchvision = [
    { index = "pytorch" },
]
sglang = { git = "https://github.com/sgl-project/sglang", subdirectory = "python" }
sglang-router = { git = "https://github.com/sgl-project/sglang", subdirectory = "sgl-model-gateway/bindings/python" }

[[tool.uv.index]]
name = "flashinfer-jit-cache"
url = "https://flashinfer.ai/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

